<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.anastasios.MainActivity">

        <TextView
            style="@style/TextStyle"
            android:layout_marginBottom="-15dp"
            android:layout_marginTop="-10dp"
            android:background="@android:color/black"
            android:text="@string/anastasios"
            android:textColor="@android:color/white"
            android:textSize="64sp" />

        <TextView
            style="@style/TextTwentyFour"
            android:background="@android:color/black"
            android:fontFamily="serif"
            android:text="@string/professional_hair_care"
            android:textColor="@color/DarkGoldenRod" />

        <TextView
            style="@style/TextTwentyFour"
            android:background="@color/colorPrimaryDark"
            android:text="@string/men_women"
            android:textColor="@color/colorPrimary" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/anastasios1" />

        <TextView
            style="@style/TextStyle"
            android:background="@color/colorDarkGray"
            android:text="@string/offers"
            android:textColor="@color/colorPrimary"
            android:textSize="46sp"
            android:textStyle="bold" />

        <TextView
            style="@style/TextEighteen"
            android:text="@string/dates" />

        <TextView
            style="@style/TextTwentyFour"
            android:background="@color/colorDarkGray"
            android:text="@string/dates2"
            android:textColor="@color/colorRed" />

        <TextView
            style="@style/TextEighteen"
            android:text="@string/men" />

        <TextView
            style="@style/TextEighteen"
            android:text="@string/women" />

        <TextView
            style="@style/TextEighteen"
            android:text="@string/brush" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGray">

            <TextView
                style="@style/TextEighteen"
                android:layout_weight="1"
                android:background="@color/colorLightGray"
                android:drawableLeft="@drawable/scissorsandcombredsmall"
                android:text="@string/timetable"
                android:textColor="@color/colorRed" />

            <TextView
                style="@style/TextEighteen"
                android:layout_weight="1"
                android:background="@color/colorLightGray"
                android:text="@string/prices"
                android:textColor="@android:color/holo_red_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGray">

            <TextView
                style="@style/TextSixteen"
                android:text="@string/timetable1"
                android:textAlignment="center" />

            <TextView
                style="@style/TextSixteen"
                android:fontFamily="arial"
                android:lineSpacingExtra="5sp"
                android:text="@string/prices1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@android:color/black"
            android:paddingTop="10dp">

            <TextView
                style="@style/TextSixteen"
                android:layout_gravity="end"
                android:background="@android:color/black"
                android:text="@string/address"
                android:textColor="@android:color/white"
                tools:onClick="@android:string/emptyPhoneNumber" />

            <TextView
                style="@style/TextStyle"
                android:layout_marginTop="5sp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/phone"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>